Updated with feedback from Assignment 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="center">
     <div class="item">
     </div>
-    <button id="btn" class="button">New Item</button>
+    <button class="btn">New Item</button>
     <label for="btn">New Item</label>
   </div>
 </body>
